<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_bg"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#CCFFFFFF"
            android:orientation="vertical"
            android:padding="32dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/label_login"
                android:textSize="38sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/label_login_guide" />

            <EditText
                android:id="@+id/user_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/edit_text"
                android:hint="@string/hint_user_name"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:singleLine="true" />

            <EditText
                android:id="@+id/password_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/edit_text"
                android:hint="@string/hint_user_password"
                android:inputType="textPassword"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:singleLine="true" />

            <CheckBox
                android:id="@+id/keep_login_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:checked="true"
                android:text="@string/checkbox_keep_login" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/login_button_bg"
                android:enabled="false"
                android:padding="14dp"
                android:text="@string/button_login"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <Button
                android:id="@+id/default_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:padding="14dp"
                android:text="@string/button_remove_default_app"
                android:textSize="16sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/link_login_method_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="6dp"
                android:text="@string/label_link_login_method"
                android:textSize="12sp" />
        </LinearLayout>
    </FrameLayout>
</ScrollView>